--- a/attendee.css
+++ b/attendee.css
@@ -128,7 +128,6 @@ body {
   border: 1.5px solid #0e464f;
   padding: 1.5rem;
   gap: 1rem;
-  padding-bottom: 2.8rem;
 }
 .attendee .details .upload span {
   color: white;
@@ -136,14 +135,10 @@ body {
   font-size: 15px;
   font-weight: 300;
 }
-.attendee .details .upload #dark-border {
-  background: #041b20;
-  height: 35vh;
-  width: 100vh;
-}
-.attendee .details .upload label {
-  position: absolute;
-  right: 40%;
+.attendee .details .upload .inp {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .attendee .details .hr {
   height: 5px;
@@ -241,14 +236,6 @@ body {
     gap: 3.2rem;
     white-space: nowrap;
     font-size: 25px;
-  }
-  .attendee .details .upload #dark-border {
-    display: none;
-  }
-  .attendee .details .upload label {
-    position: relative;
-    right: 0.3rem;
-    top: 0.5rem;
   }
   .attendee .details .upload label img {
     width: 200px;
