--- a/book.css
+++ b/book.css
@@ -135,7 +135,7 @@ body {
   gap: 2rem;
   align-items: center;
   background: radial-gradient(circle at center, #031011, #104f58);
-  padding: 1rem;
+  padding: 1.7rem;
   border: 1.8px solid #24a0b5;
   border-radius: 20px;
   position: relative;
@@ -144,7 +144,7 @@ body {
   display: flex;
   flex-direction: column;
   background: #072b2f;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 15px;
   border: 1.8px solid #24a0b5;
   gap: 1.5rem;
@@ -177,16 +177,23 @@ body {
   padding: 1rem;
   border-radius: 15px;
   border: 2px solid #133d44;
+  white-space: normal;
 }
 .ticket-ready .ticket-border .user .data .input {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  justify-content: center;
   color: white;
   padding: 0;
+  white-space: nowrap;
   font-family: var(--main-font);
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 .ticket-ready .ticket-border .user .data .input #one {
   border-left: none;
+  max-width: 200px;
 }
 .ticket-ready .ticket-border .user .data .input .form-group {
   display: flex;
@@ -194,6 +201,7 @@ body {
   padding: 10px;
   border-bottom: 2px solid #1a4c54;
   border-left: 2px solid #1a4c54;
+  max-width: 160px;
 }
 .ticket-ready .ticket-border .user .data .input .form-group label {
   font-size: 0.9rem;
@@ -250,7 +258,7 @@ body {
   white-space: nowrap;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (min-width: 0px) and (max-width: 500px) {
   .nav {
     gap: 5rem;
     padding: 1rem;
@@ -266,7 +274,7 @@ body {
     width: 100%;
   }
   .ticket-ready .ready #tick {
-    gap: 9.6rem;
+    gap: 8.5rem;
     white-space: nowrap;
   }
   .ticket-ready .head-text {
@@ -278,8 +286,12 @@ body {
   .ticket-ready .head-text span {
     font-size: 13px;
   }
+  .ticket-ready .ticket-border {
+    width: 85%;
+  }
   .ticket-ready .ticket-border .user {
     gap: 1.5rem;
+    width: 90%;
   }
   .ticket-ready .ticket-border .user .location h1 {
     font-size: 37px;
@@ -292,6 +304,13 @@ body {
   }
   .ticket-ready .ticket-border .user .data {
     font-size: 5px;
+    width: 90%;
+  }
+  .ticket-ready .ticket-border .user .data .input #one {
+    max-width: 88px;
+  }
+  .ticket-ready .ticket-border .user .data .input .form-group {
+    max-width: 88px;
   }
   .ticket-ready .btns {
     flex-direction: column;
